styles/index.css
/*  Make frontPage occupy whole screen
    and align contents to the center */
.front-page {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    height: 100vh;
    width: 100vw;
    max-height: 100%;
    max-width: 100%;
    margin: 0;
    padding: 0;
    text-align: center;
    pointer-events: none;  /* Pass clicks to main screen doodle */
    background-color: rgba(var(--base-bg), var(--body-opacity));
}

/* Set front page emoji size */
.front-page > h1 {
    font-size: 4em;
    line-height: 0;
}

/* Move front page links to top right */
/* Position hamburger button to the same as front page links */
.front-page-nav, .hamburger {
    display: flex;
    flex-direction: row;
    position: fixed;
    align-items: center;
    right: 0.5em;
    top: 0.5em;
    column-gap: 1em;
    border-radius: 0.5em;
    padding: 0.5em;
    transition: 0.4s;
}

/* Stack navbar on top of hamburger */
.front-page-nav {
    z-index: 999;
}
.hamburger {
    z-index: 998;
}

.hamburger-label {
    font-size: 1.5em;
    text-decoration: none;
}

/* Move hamburger menu into screen on scroll down */
.front-page-nav.scroll-down, .hamburger.scroll-down {
    right: 1em;
    top: 1em;
    background-color: rgba(var(--sec-bg), 0.15);
    backdrop-filter: blur(16px);
    -webkit-backdrop-filter: blur(16px);
    box-shadow: var(--shadow), var(--border);
}
/* Hide and show navbar and hamburger menu with animation */
.front-page-nav.hide, .hamburger.hide {
    pointer-events: none;
    opacity: 0;
}

/* Disable line under front page links */
.front-page-link {
    text-decoration: none;
}

/* Style front page theme selection menu */
#front-page-color-select {
    border: unset;
    background-color: inherit;
    color: rgb(var(--url));
    font-size: 1em;
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    max-width: 6.25em;
}

/* Align the scroll down prompt to the bottom of frontPage */
.front-page > .front-page-scroll-prompt {
    position: absolute;
    left: 0;
    bottom: 1em;
    width: 100%;
}

/* Animate the scroll down prompt arrow */
#front-page-down-arrow {
    color: rgb(var(--base-fg));
    animation:updown 2s ease-in-out infinite;
}
@keyframes updown { 
    0% {  
        transform:translateY(0em); 
    } 
    50% {
        transform:translateY(0.5em);
    }
    100% {
        transform:translateY(0em);
    }
}

/* Pass clicks to main screen doodle */
.front-page > * {
    pointer-events: auto;
}

/* Limit intro paragraph width and center it */
.intro {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    width: 100vw;
    max-width: 100%;
    margin: 0;
    padding: 1em 0 1em 0;
    text-align: center;
    background-color: rgb(var(--sec-bg));
}

.intro > h2, .intro > p {
    max-width: 75%
}

/* Make about occupy whole screen
    and align contents to the center */
.about {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    align-items: flex-start;
    justify-content: center;
    box-sizing: border-box;
    width: 100vw;
    max-width: 100%;
    padding: 4em 0 4em 0;
    background-color: rgba(var(--base-bg), var(--body-opacity));
}

/* Limit education and skills list width */
.about > .about-edu, .about > .about-skills {
    width: 45vw;
    /* min-width: 20em; */
    max-width: 30%;
    text-align: left;
    box-sizing: border-box;
    padding: 1em 2em;
    /* background-color: rgba(255, 255, 255, 0.15); */
    background-color: rgba(var(--sec-bg), 0.15);
    /* background-color: rgba(var(--dark-bg), 0.15); */
    backdrop-filter: blur(16px);
    -webkit-backdrop-filter: blur(16px);
    /* box-shadow: 0 0 1em 0 rgba(0, 0, 0, 0.1); */
    /* box-shadow: 0 0 2em 4px rgba(0, 0, 0, 0.1); */
    box-shadow: var(--shadow);
    /* border: 2px solid rgba(141, 161, 1, 0.5); */
    border-radius: 0.5em;
}

.about > .about-edu {
    margin: 0 4em 0 0;
}
.about > .about-skills {
    margin: 0 0 0 4em;
}

/* Display education and skills vertically on mobile */
@media (max-width: 1200px) {
    .about {
        flex-direction: column;
        align-items: center;
        padding: 0;
    }
    .about > .about-edu, .about > .about-skills {
        width: 100vw;
        max-width: 100%;
        border-radius: 0;
        margin: 0;
        box-shadow: unset;
    }
    .about > .about-edu {
        padding: 1em 2em 0.5em;
    }
    .about > .about-skills {
        padding: 0.5em 2em 1em;
    }
}

/* Style link buttons */
.link-button {
    background-color: rgb(var(--url));
    color: rgb(var(--base-bg));
    border: unset;
    cursor: pointer;
}
.link-button:hover {
    filter: brightness(1.1);
}
.link-button:active {
    filter: brightness(1.2);
}

/* Remove text decorations in button rows */
.button-row {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    align-items: flex-start;
    column-gap: 1em;
    row-gap: 1em;
}

#intro-button-row {
    padding: 0.5em 0 1em 0;
}

